# gmemo

./: AUTHORS  BUGS  FAQ  INSTALL  NEWS  README  TODO  aclocal.m4  configure.in  gmemo.1  gmemo_gnome.1
debian/: changelog  control  copyright  docs  examples  files  gmemo.substvars  rules
examples/: gmemo.xml  gmemo_feasts.xml
src/: GNOME_GmemoApplet.server  GNOME_GmemoApplet.xml  Makefile.am  Makefile.win32  cle_petite.xpm  getopt.c  getopt1.c  gmemo.c  gmemo.h  gmemo_display.c  gmemo_display.h  gmemo_feast.c  gmemo_feast.h  gmemo_gnome_applet.c  gmemo_gnome_applet.h  gmemo_loadsave.c  gmemo_loadsave.h  gmemo_main.c  gmemo_memo.c  gmemo_memo.h
