AC_INIT(src/gmemo.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gmemo,0.1.1)
AC_PROG_CC
AC_PROG_INSTALL

AC_ARG_ENABLE(esd,     [  --disable-esd           Turn off ESD (default=auto)],,enable_esd=yes)

AM_PATH_GLIB_2_0(2.0.0,,AC_MSG_ERROR([
*** GLib 2.0 is required to build Gmemo; please make sure you have the GLib
*** development headers installed. The latest version of GLib is
*** always available at http://www.gtk.org/.]))
AM_PATH_GTK_2_0(2.0.0,,AC_MSG_ERROR([
*** GTK+ 2.0 is required to build Gmemo; please make sure you have the GTK+
*** development headers installed. The latest version of GTK+ is
*** always available at http://www.gtk.org/.]))

CFLAGS="-Wall -O2 $GTK_CFLAGS"

AC_OUTPUT(Makefile src/Makefile)